--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
                             <form action="result.html">                        
                                 <input class="typeemail" name="name" type="text" placeholder="Enter your Email" required>
                                 <span class="errormessage" id="error-message">Please check your email.</span>
-                                <input class="getstartbut" type="submit" value="Get Start">
-                           
+                                <input class="getstartbut" type="submit" value="Get Start">                           
                             </form>
                         </div>
                         <!-- 
@@ -49,12 +48,11 @@ wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
                 <img class="firstimg" src="./images/illustration-1.svg" alt="regestration image">
             </div>
             <div class="sectiontwo"> 
-                      <img class="curveimg" src="./images/bg-curve-desktop.svg">      
                 <div class="infosection">                            
                     <p class="secondtitle">Stay productive, wherever you are</p>
-                    <p class="secondexplanation">Never let location be an issue when accessing your files.
+                    <p class="secondexplanation first">Never let location be an issue when accessing your files.
                          Fylo has you covered for all of your file storage needs.</p>
-                         <p class="secondexplanation">Securely share files and folders with friends,
+                         <p class="secondexplanation second">Securely share files and folders with friends,
                              family and colleagues for live collaboration. No email attachments required!</p>
                              <div class="fyloworklink">
                                 <a class="seelink" href="#">See how Fylo works</a>
@@ -123,8 +121,10 @@ wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
                 <a href="#"><img src="./images/insta.png" alt="instagram"></a>
                 <a href="#"><img src="./images/twitter.png" alt="instagram"></a>
                 <a href="#"><img src="./images/facebook.png" alt="instagram"></a>
-            </div>                  
+            </div>   
+            <p class="author">Challenge by Frontend Mentor. Coded by Mouayyad Ahmed.</p>               
         </footer>
     </div>
+    
 </body>
 </html>
